<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BingoGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
  
    <string name="exit">退出</string>
    <string name="ok">確定</string>
    
    <string name="role">活动角色：</string>
    <string name="rangeofnumber">数值范围：</string>
    <string name="numofcard">卡片数量：</string>
    <string name="cardone">卡片一</string>
    <string name="cardtwo">卡片二</string>
    <string name="cardthree">卡片三</string>
    <string name="close">关闭</string>
    <string name="getprize">获奖</string>
    <string name="prize">奖</string>

</resources>
