<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#e50110" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="LuckyBingo"
            android:textColor="#ffffff"
            android:textSize="30dp" />

        <Button
            android:id="@+id/giveprize"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@+id/reset"
            android:background="#6FAF2C"
            android:text="颁奖" />

        <Button
            android:id="@+id/reset"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:background="#6FAF2C"
            android:text="重置" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/cardchoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_menu"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/textviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/card1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cardone" 
                android:textSize="25dp"
                />

            <TextView
                android:id="@+id/card2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cardtwo" 
                android:textSize="25dp"
                />

            <TextView
                android:id="@+id/card3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cardthree" 
                android:textSize="25dp"
                />
        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </android.support.v4.view.ViewPager>
    </LinearLayout>

</RelativeLayout>